--- a/C#/Projet_Projet_2_Tran_Strasser/Projet_Projet_2_Tran_Strasser.csproj
+++ b/C#/Projet_Projet_2_Tran_Strasser/Projet_Projet_2_Tran_Strasser.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Class1.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Class2.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
